[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Pickups/PowerUp/PowerUp.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "Close"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Crystal:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0392157, 0.611765, 0.819608, 1 ), Color( 0.67, 0.912, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Inner:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.360784, 0.807843, 1, 1 ), Color( 0.86, 0.958, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Consumed"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Crystal:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crystal:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 5, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Inner:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -720.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Inner:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 9, 9 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "free" ],
"method": "call_deferred"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Crystal:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crystal:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Inner:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Inner:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Crystal:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0392157, 0.611765, 0.819608, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Inner:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.360784, 0.807843, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 128.0

[node name="PowerUp" type="Area2D"]
monitorable = false
collision_layer = 0
script = ExtResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "rest"
anims/Close = SubResource( 1 )
anims/Consumed = SubResource( 2 )
anims/rest = SubResource( 3 )

[node name="area" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Crystal" type="Polygon2D" parent="."]
color = Color( 0.0392157, 0.611765, 0.819608, 1 )
polygon = PoolVector2Array( 0, -16, -16, 0, 0, 16, 16, 0 )

[node name="Inner" type="Polygon2D" parent="."]
color = Color( 0.360784, 0.807843, 1, 1 )
polygon = PoolVector2Array( 0, -8, -8, 0, 0, 8, 8, 0 )
[connection signal="body_entered" from="." to="." method="_on_PowerUp_entered"]
[connection signal="body_exited" from="." to="." method="_on_PowerUp_exited"]
